labs/lab10/allow-backend-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userX-allow-backend-database
  namespace: userX-namespace
spec:
  podSelector:
    matchLabels:
      app: database
      owner: userX
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
          owner: userX
    ports:
    - protocol: TCP
      port: 5432
