labs/lab10/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userX-deny-all
  namespace: userX-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
